# prism-test-plugin

./: CMakeLists.txt  plugin.json  readme.md
cats/my_cute_cat/: catpack.json
src/: testplugin.cpp  testplugin.h
